[gd_scene load_steps=7 format=3 uid="uid://mjutkaitgril"]

[ext_resource type="Script" path="res://DebugScreen.gd" id="1_p0i1q"]
[ext_resource type="Script" path="res://Camera2D.gd" id="2_v8qub"]
[ext_resource type="PackedScene" uid="uid://lorewu3d2211" path="res://Board.tscn" id="3_sq1xj"]
[ext_resource type="PackedScene" uid="uid://33rmbwru2587" path="res://GameController.tscn" id="4_co1ve"]
[ext_resource type="PackedScene" uid="uid://1eh2s5xbr48s" path="res://InputHandler.tscn" id="5_esnii"]
[ext_resource type="Script" path="res://PieceScripts/Pawn/Observer.gd" id="6_mnq8c"]

[node name="Main" type="Node2D"]

[node name="UI" type="CanvasLayer" parent="."]

[node name="DebugScreen" type="RichTextLabel" parent="UI"]
offset_right = 681.0
offset_bottom = 424.0
mouse_filter = 2
script = ExtResource("1_p0i1q")

[node name="Camera2D" type="Camera2D" parent="."]
script = ExtResource("2_v8qub")
MIN_ZOOM = 0.2
MAX_ZOOM = 5.0

[node name="Board" parent="." instance=ExtResource("3_sq1xj")]
z_index = -2
width = 5
height = 6

[node name="GameController" parent="." instance=ExtResource("4_co1ve")]
unique_name_in_owner = true

[node name="InputHandler" parent="." instance=ExtResource("5_esnii")]
unique_name_in_owner = true

[node name="Observer" type="Node2D" parent="."]
script = ExtResource("6_mnq8c")
